# Preempt_ADDA_signalling

./: README.md
include/: ADS1256.c  ADS1256.h  ADS1256_old.c  ADS1256_read  ADS1256_read.c  functions.h  functions_old.h  variables.h
main/: CMakeLists.txt  cur_meas.txt  main.cpp  notes.txt  roboleg_func.cpp  stop.cpp
main/backup/: abs_characterization_fast_1.31_p1k_d1k  kbs_ch_3_p30  main_9082023.cpp  main_yedek.cpp  yedek_30_7_2023.cpp
main/backup/include/: ADS1256.c
roboleg2/: roboleg_func.hpp
roboleg2/backup/: rt_task_yedek.txt
